--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
   <title>Gamepad API test</title>
   <style type="text/css" media="screen">
+    body * {
+      margin: 0; padding: 0;
+      font-family: 'Courier New';
+    }
+    
     #canvas {
       width: 400px;
       height: 400px;
@@ -62,7 +67,7 @@
       
       var scores = "<table>";
       Object.keys(scoreboard).forEach(function(value, index) {
-        scores += "<tr><td>" index + "</td><td>" + value + "</td></tr>";
+        scores += "<tr><td>" + index + "</td><td>" + value + "</td></tr>";
       });
       scores += "</table>";
     });
