--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,7 @@
       document.getElementById("latency").innerHTML = latency;
       
       scoreboard = gameState.scoreboard;
+    ///// fucking here innit
       console.log(gameState);
       if (scoreboard != null) {
         scores = "<table>";
